--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   path_provider: ^2.1.4
   permission_handler: ^11.3.1
   image_cropper: ^8.0.2
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
