--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   image_cropper: ^8.0.2
   intl: ^0.19.0
   flutter_launcher_icons: ^0.13.1
+  auto_size_text: ^3.0.0
 
 dev_dependencies:
   flutter_test:
