--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   intl: ^0.19.0
   flutter_launcher_icons: ^0.13.1
   auto_size_text: ^3.0.0
+  page_transition: ^2.1.0
 
 dev_dependencies:
   flutter_test:
