--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.1.5+1
+version: 1.1.6+1
 
 environment:
   sdk: '>=3.4.4 <4.0.0'
@@ -45,6 +45,7 @@ dependencies:
   flutter_launcher_icons: ^0.13.1
   auto_size_text: ^3.0.0
   page_transition: ^2.1.0
+  flex_color_picker: ^3.5.1
 
 dev_dependencies:
   flutter_test:
