--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.1.9+1
+version: 1.2.0+1
 
 environment:
   sdk: '>=3.4.4 <4.0.0'
@@ -49,6 +49,10 @@ dependencies:
   local_auth: ^2.3.0
   home_widget: ^0.7.0
   provider: ^6.1.2
+  flutter_dotenv: ^5.1.0
+  sqflite_sqlcipher: ^3.1.0+1
+  flutter_secure_storage: ^9.2.2
+  crypto: ^3.0.5
 
 dev_dependencies:
   flutter_test:
@@ -77,6 +81,7 @@ flutter:
       - assets/
       - assets/avatars/
       - assets/HomeIcons/
+      - db.env
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
