--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,8 @@ dependencies:
   flutter_secure_storage: ^9.2.2
   crypto: ^3.0.5
   fluttertoast: ^8.2.8
+  timezone: ^0.9.4
+  flutter_local_notifications: ^17.2.2
 
 dev_dependencies:
   flutter_test:
